// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render page slot correctly 1`] = `
"<view class=\\"nut-pagination\\">
  <view class=\\"nut-pagination-prev disabled\\">上一页</view>
  <view class=\\"nut-pagination-contain\\">
    <view class=\\"nut-pagination-item active\\">foo我呀</view>
    <view class=\\"nut-pagination-item\\">foo我呀</view>
    <view class=\\"nut-pagination-item\\">foo我呀</view>
    <view class=\\"nut-pagination-item\\">foo我呀</view>
    <view class=\\"nut-pagination-item\\">foo我呀</view>
  </view>
  <!--v-if-->
  <view class=\\"nut-pagination-next\\">下一页</view>
</view>"
`;

exports[`should render prev-text、next-text slot correctly 1`] = `
"<view class=\\"nut-pagination\\">
  <view class=\\"nut-pagination-prev disabled\\">Custom PrevText</view>
  <view class=\\"nut-pagination-contain\\">
    <view class=\\"nut-pagination-item active\\">1</view>
    <view class=\\"nut-pagination-item\\">2</view>
    <view class=\\"nut-pagination-item\\">3</view>
    <view class=\\"nut-pagination-item\\">4</view>
    <view class=\\"nut-pagination-item\\">5</view>
  </view>
  <!--v-if-->
  <view class=\\"nut-pagination-next\\">Custom NextText</view>
</view>"
`;
